# gzkfast

./: .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  gzkfast.dsw  gzkfast.ncb  gzkfast.opt  header.txt  run.sh
.github/workflows/: cmake.yml
data/: bc.txt  hot.cpt  hot1.cpt  skymaps.sh  sourcemap.sh
include/: bfieldspace.h  cmb.h  cmbdist.h  delta.h  delta1600.h  deltaspectrum.h  detector.h  electron.h  eventgenerator.h  evolutionthread.h  g4vector.h  gerror.h  gfunction.h  gguard.h  ghistogram.h  gintegrate.h  gloghistogram.h  glorentz.h  gmath.h  gmatrix.h  gmutex.h  grotation.h  grunthread.h  gthread.h  gvector.h  mu.h  neutron.h  nu.h  nudetector.h  particle.h  photon.h  photondetector.h  physicalconstants.h  pion.h  pizero.h  proton.h  protondetector.h  protonsource.h  protonspectrum.h  source.h  (+6 more)
src/: bfieldspace.cpp  cmb.cpp  cmbdist.cpp  delta.cpp  delta1600.cpp  deltaspectrum.cpp  electron.cpp  eventgenerator.cpp  evolutionthread.cpp  g4vector.cpp  gerror.cpp  gguard.cpp  ghistogram.cpp  gintegrate.cpp  gloghistogram.cpp  gmath.cpp  gmutex.cpp  grotation.cpp  grunthread.cpp  gthread.cpp  mu.cpp  neutron.cpp  nu.cpp  nudetector.cpp  particle.cpp  photon.cpp  photondetector.cpp  pion.cpp  pizero.cpp  proton.cpp  protondetector.cpp  protonsource.cpp  protonspectrum.cpp  sphere.cpp  threebodydecay.cpp  twobodydecay.cpp  universe.cpp  z.cpp
utils/: betadecay.cpp  cmbdensity.cpp  cmbspectrum.cpp  deltadecay.cpp  gzkfast.cpp  meanpath.cpp
win32/: betadecay.dsp  betadecay.plg  cmbspectrum.dsp  cmbspectrum.plg  deltadecay.dsp  deltadecay.plg  gzkfast.dsp  gzkfast.plg  gzkparticle.dsp  gzkparticle.plg
